# Test-Automation-Framework

./: .env  .gitignore  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
tests/: test_trello.py
